@@ -1,4 +1,4 @@
-#!/bin/sh
+#! /bin/bash
 # RTAI application loader script.
 # (Processes the .runinfo files)
 # June 2004, <rpm@xenomai.org>
